# strela

./: .gitignore  DEVNOTES.md  README.md  pyproject.toml
docs/: index.html  search.js  strela.html
docs/strela/: alert_generator.html  alertstates.html  config.html  mailer.html  my_runner.html  symboltype.html  templates.html
docs/strela/alertstates/: alertstate.html  alertstaterepository.html  doubledownalertstate.html  fluctulertstate.html
strela/: __init__.py  alert_generator.py  config.py  finalert.py  mailalert.py  mailer.py  my_runner.py  runner.py  symboltype.py  templates.py
strela/alertstates/: __init__.py  alertstate.py  alertstaterepository.py  doubledownalertstate.py  fluctulertalertstate.py  fluctulertstate.py
tests/: helpers.py  test_alert_generator.py  test_doubledownalertstate.py  test_finalert.py  test_fluctulertstate.py  test_mailingalert.py  test_my_runner.py  test_runner.py  test_strela.py
tests/alertstates/: test_alertstaterepository.py
tests/input_data/: iusc_sw_history_excerpt.json
