[tool.poetry]
name = "strela"
version = "0.2.4"
description = ""
authors = ["ymyke"]

[tool.poetry.dependencies]
python = ">=3.7.13,<3.10"
pandas = ">=1.3.5"
yagmail = ">=0.15.280"
keyring = ">=23"    # for yagmail
python-slugify = ">=5.0.0"
tessa = {git = "https://github.com/ymyke/tessa.git", rev = "add-symbols"}
# ^ FIXME Use production package once add-symbols branch is released

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
pylint = "*"
ipykernel = "*"
pytest-mock = "*"
pdoc = "*"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
